--- a/TPweb3/TPweb3.csproj
+++ b/TPweb3/TPweb3.csproj
@@ -60,6 +60,7 @@
     <Content Include="cocinero\evento.aspx" />
     <Content Include="cocinero\perfil.aspx" />
     <Content Include="cocinero\receta.aspx" />
+    <Content Include="comensal\perfil.aspx" />
     <Content Include="comensal\reservar.aspx" />
     <Content Include="comentarios.aspx" />
     <Content Include="content\css\bootstrap-theme.css" />
@@ -111,6 +112,13 @@
     </Compile>
     <Compile Include="Comensal.Master.designer.cs">
       <DependentUpon>Comensal.Master</DependentUpon>
+    </Compile>
+    <Compile Include="comensal\perfil.aspx.cs">
+      <DependentUpon>perfil.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="comensal\perfil.aspx.designer.cs">
+      <DependentUpon>perfil.aspx</DependentUpon>
     </Compile>
     <Compile Include="comensal\reservar.aspx.cs">
       <DependentUpon>reservar.aspx</DependentUpon>
@@ -169,7 +177,9 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="content\img\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
