--- a/TPweb3/TPweb3.csproj
+++ b/TPweb3/TPweb3.csproj
@@ -74,7 +74,9 @@
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
     <Content Include="scripts\npm.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clases\Evento.cs" />
