--- a/TPweb3/Web.config
+++ b/TPweb3/Web.config
@@ -6,10 +6,11 @@
   -->
 
 <configuration>
-    <system.web>
-      <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
+  <system.web>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
+    <sessionState mode="InProc" cookieless="false" timeout="10"/>
+  </system.web>
 
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
